crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__lambda_pos_args_with_defaults.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..23,
                value: Lambda(
                    ExprLambda {
                        range: 0..23,
                        parameters: Parameters {
                            range: 7..20,
                            posonlyargs: [],
                            args: [
                                ParameterWithDefault {
                                    range: 7..8,
                                    def: Parameter {
                                        range: 7..8,
                                        arg: Identifier {
                                            id: "a",
                                            range: 7..8,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 10..14,
                                    def: Parameter {
                                        range: 10..11,
                                        arg: Identifier {
                                            id: "b",
                                            range: 10..11,
                                        },
                                        annotation: None,
                                    },
                                    default: Some(
                                        Constant(
                                            ExprConstant {
                                                range: 12..14,
                                                value: Int(
                                                    20,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    ),
                                },
                                ParameterWithDefault {
                                    range: 16..20,
                                    def: Parameter {
                                        range: 16..17,
                                        arg: Identifier {
                                            id: "c",
                                            range: 16..17,
                                        },
                                        annotation: None,
                                    },
                                    default: Some(
                                        Constant(
                                            ExprConstant {
                                                range: 18..20,
                                                value: Int(
                                                    30,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 22..23,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
