crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__lambda_posonly_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..20,
                value: Lambda(
                    ExprLambda {
                        range: 0..20,
                        parameters: Some(
                            Parameters {
                                range: 7..17,
                                posonlyargs: [
                                    ParameterWithDefault {
                                        range: 7..8,
                                        parameter: Parameter {
                                            range: 7..8,
                                            name: Identifier {
                                                id: "a",
                                                range: 7..8,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                    ParameterWithDefault {
                                        range: 10..11,
                                        parameter: Parameter {
                                            range: 10..11,
                                            name: Identifier {
                                                id: "b",
                                                range: 10..11,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                ],
                                args: [
                                    ParameterWithDefault {
                                        range: 16..17,
                                        parameter: Parameter {
                                            range: 16..17,
                                            name: Identifier {
                                                id: "c",
                                                range: 16..17,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                ],
                                vararg: None,
                                kwonlyargs: [],
                                kwarg: None,
                            },
                        ),
                        body: NumberLiteral(
                            ExprNumberLiteral {
                                range: 19..20,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
